--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
@@ -1,8 +1,28 @@
-<div>
-  <div *ngFor="let msg of messages">
-    <strong>{{ msg.sender }}:</strong> {{ msg.content }} <em>{{ msg.timestamp }}</em>
+<div class="flex flex-col items-center justify-center h-screen py-8">
+  <div class="h-full w-1/2 overflow-y-scroll">
+    <div *ngFor="let message of messages">
+      <!-- <strong>{{ message.authorId }}:</strong> {{ message.content }} <em>{{ message.sentAt | date:'shortTime' }}</em> -->
+      <div class="text-xs font-italic text-gray-500 ml-6">
+        {{ message.authorId }} - {{ message.sentAt | date:'shortTime' }}
+      </div>
+      <div class="bg-blue-100 mb-2 px-6 py-2 rounded-full text-xl">
+        {{ message.content }}
+      </div>
+    </div>
   </div>
-  <input [(ngModel)]="message" placeholder="Type your message here" (keyup.enter)="sendMessage()">
-  <button (click)="sendMessage()">Send</button>
-</div>
+  <div class="flex flex-row gap-6 items-center justify-center mt-6 w-1/2">
+    <input
+      class="border py-2 px-6 rounded-full w-full border-2 border-blue-300"
+      [(ngModel)]="message"
+      placeholder="Écrivez votre message ici..."
+      (keyup.enter)="sendMessage()"
+    >
+    <button
+      (click)="sendMessage()"
+      class="bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition-colors duration-300"
+    >
+      Envoyer
+    </button>
+  </div>
+  </div>
 <!-- TODO: améliorer l'interface -->
