en cours - récupération du username de l'utilisateur connecté
Signed-off-by: Joanny Prignol <joannyprignol@gmail.com>

--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
@@ -3,9 +3,8 @@
     <div *ngFor="let message of messages">
       <div class="mx-6 mb-1 pt-2 flex justify-between">
         <span class="text-xs font-italic text-gray-500">
-          <!-- {{ message.authorId }} -->
-            <!-- TODO: Ajouter le nom d'utilisateur -->
-            Username
+
+          {{ message.authorUsername }}
         </span>
         <span class="text-xs font-italic text-gray-500">
           {{ message.sentAt | date:'shortTime' }}
