--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
@@ -1,16 +1,21 @@
 <div class="flex flex-col items-center justify-center h-screen py-8">
   <div class="h-full w-1/2 overflow-y-scroll">
     <div *ngFor="let message of messages">
-      <div class="mx-6 mb-1 pt-2 flex justify-between">
+      <div
+        class="mx-6 mb-1 pt-2 flex justify-between"
+        [ngClass]="message.authorUsername === username.username ? 'flex-row-reverse' : 'flex-row'"
+      >
         <span class="text-xs font-italic text-gray-500">
-
           {{ message.authorUsername }}
         </span>
         <span class="text-xs font-italic text-gray-500">
           {{ message.sentAt | date:'shortTime' }}
         </span>
       </div>
-      <div class="bg-blue-100 mb-2 px-6 py-2 rounded-full text-xl w-max-full w-fit">
+      <div
+        class="bg-blue-100 mb-2 px-6 py-2 rounded-full text-xl w-max-full w-fit"
+        [ngClass]="message.authorUsername === username.username ? 'ml-auto' : 'mr-auto'"
+      >
         {{ message.content }}
       </div>
     </div>
