--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col items-center justify-center h-screen py-8">
-  <div class="h-full w-1/2 overflow-y-scroll">
+<div class="flex flex-col items-center justify-center h-screen py-8 bg-slate-900">
+  <div  #messageContainer class="h-full w-1/2 overflow-y-scroll hide-scrollbar">
     <div *ngFor="let message of messages">
       <div
         class="mx-6 mb-1 pt-2 flex justify-between"
@@ -8,31 +8,37 @@
         <span class="text-xs font-italic text-gray-500">
           {{ message.authorUsername }}
         </span>
-        <span class="text-xs font-italic text-gray-500">
+        <!-- <span class="text-xs font-italic text-gray-500">
           {{ message.sentAt | date:'shortTime' }}
-        </span>
+        </span> -->
       </div>
       <div
-        class="bg-blue-100 mb-2 px-6 py-2 rounded-full text-xl w-max-full w-fit"
-        [ngClass]="message.authorUsername === username.username ? 'ml-auto' : 'mr-auto'"
+        class="mb-2 px-6 py-2 rounded-xl text-xl text-white w-max-full w-fit flex flex-col"
+        [ngClass]="message.authorUsername === username.username ? 'ml-auto bg-emerald-500' : 'mr-auto bg-slate-500'"
       >
-        {{ message.content }}
+        <div class="mt-2">
+          {{ message.content }}
+        </div>
+        <span class="text-xs font-italic text-slate-300 ml-auto">
+          {{ message.sentAt | date:'shortTime' }}
+        </span>
       </div>
     </div>
   </div>
   <div class="flex flex-row gap-6 items-center justify-center mt-6 w-1/2">
     <input
-      class="border py-2 px-6 rounded-full w-full border-2 border-blue-300"
+      class="py-2 px-6 bg-slate-700 rounded-full w-full placeholder-slate-400 text-white focus:outline-none focus:border-emerald-400 focus:border"
       [(ngModel)]="message"
       placeholder="Écrivez votre message ici..."
       (keyup.enter)="sendMessage()"
     >
     <button
       (click)="sendMessage()"
-      class="bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition-colors duration-300"
+      class="bg-emerald-500 text-white p-4 rounded-full hover:bg-emerald-600 transition-colors duration-300 w-12 h-12 flex items-center justify-center"
     >
-      Envoyer
+      <i class="fa-solid fa-paper-plane fa-xl"></i>
     </button>
+
   </div>
   </div>
 <!-- TODO: améliorer l'interface -->
