--- a/front/ycyw-chat-poc/src/app/components/login/login.component.html
+++ b/front/ycyw-chat-poc/src/app/components/login/login.component.html
@@ -1,6 +1,31 @@
-<form (ngSubmit)="login()" #loginForm="ngForm">
-  <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required>
-  <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required>
-  <button type="submit">Se connecter</button>
-  <p *ngIf="errorMsg" style="color:red">{{ errorMsg }}</p>
-</form>
+<div class="bg-slate-900">
+  <form
+    (ngSubmit)="login()"
+    #loginForm="ngForm"
+    class="flex flex-col items-center justify-center h-screen space-y-4"
+  >
+    <input
+      type="text"
+      [(ngModel)]="username"
+      name="username"
+      placeholder="Nom d'utilisateur"
+      required
+      class="py-2 px-6 bg-slate-700 rounded-full w-1/4 placeholder-slate-400 text-white focus:outline-none focus:border-emerald-400 focus:border"
+    >
+    <input
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      placeholder="Mot de passe"
+      required
+      class="py-2 px-6 bg-slate-700 rounded-full w-1/4 placeholder-slate-400 text-white focus:outline-none focus:border-emerald-400 focus:border"
+    >
+    <button
+      type="submit"
+      class="bg-emerald-500 text-white px-6 py-2 rounded-full hover:bg-emerald-600 transition-colors duration-300"
+    >
+      Se connecter
+    </button>
+    <p *ngIf="errorMsg" style="color:red">{{ errorMsg }}</p>
+  </form>
+</div>
