--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.html
@@ -8,9 +8,6 @@
         <span class="text-xs font-italic text-gray-500">
           {{ message.authorUsername }}
         </span>
-        <!-- <span class="text-xs font-italic text-gray-500">
-          {{ message.sentAt | date:'shortTime' }}
-        </span> -->
       </div>
       <div
         class="mb-2 px-6 py-2 rounded-xl text-xl text-white w-max-full w-fit flex flex-col"
@@ -27,18 +24,19 @@
   </div>
   <div class="flex flex-row gap-6 items-center justify-center mt-6 w-1/2">
     <input
-      class="py-2 px-6 bg-slate-700 rounded-full w-full placeholder-slate-400 text-white focus:outline-none focus:border-emerald-400 focus:border"
+      class="py-2 px-6 bg-slate-700 rounded-full w-full placeholder-slate-400 text-white focus:outline-none
+            focus:border-emerald-400 focus:border"
       [(ngModel)]="message"
       placeholder="Écrivez votre message ici..."
       (keyup.enter)="sendMessage()"
     >
     <button
       (click)="sendMessage()"
-      class="bg-emerald-500 text-white p-4 rounded-full hover:bg-emerald-600 transition-colors duration-300 w-12 h-12 flex items-center justify-center"
+      class="bg-emerald-500 text-white p-4 rounded-full hover:bg-emerald-600 transition-colors duration-300 w-12
+            h-12 flex items-center justify-center"
     >
       <i class="fa-solid fa-paper-plane fa-xl"></i>
     </button>
 
   </div>
   </div>
-<!-- TODO: améliorer l'interface -->
