--- a/front/ycyw-chat-poc/src/app/components/chat/chat.component.scss
+++ b/front/ycyw-chat-poc/src/app/components/chat/chat.component.scss
@@ -1,8 +1,8 @@
 .hide-scrollbar {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
+  display: none;
 }
